# aider-start

./: .gitignore  CHECKLIST_PACKAGING.md  LICENSE  MANIFEST.in  README.md  build_and_upload.bat  build_and_upload.sh  command_executor.py  config_manager.py  install.bat  install_dev.bat  install_dev.sh  main.py  pyproject.toml  requirements.txt  setup.py  test_output.txt.bak  tui_framework.py  uninstall.bat
.github/workflows/: publish-to-pypi.yml  python-package.yml
aider_start/: __init__.py  cli.py  command_executor.py  config_manager.py  context_help.py  exceptions.py  logger.py  main.py  param_db.py  param_validator.py  profile_builder.py  provider_adapters.py  provider_manager.py  secure_config.py  tui.py  utils.py
aider_start.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
aider_start/cli/: __init__.py  app.py  commands.py  entrypoint.py
aider_start/commands/: __init__.py  executor.py
aider_start/config/: config_manager.py  flag_manager.py  json_utils.py  yaml_utils.py
aider_start/db/: __init__.py  advanced.py  database.py  database_connection.py  database_flag_metadata.py  database_presets.py  flags.py  model_metadata.py  model_settings.py  models.py  presets.py
docs/: API.md  USAGE.md
scripts/: prd.txt  task-complexity-report.json
tests/: __init__.py  test_command_executor.py  test_config_manager.py  test_context_help.py  test_integration.py  test_main.py  test_param_db.py  test_param_validator.py  test_profile_builder.py  test_profile_creation.py  test_provider_adapters.py  test_provider_manager.py  test_secure_config.py  test_tui.py  test_tui_integration.py  test_tui_validation.py
(+83 files in other folders)
