[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aider-start"
version = "0.1.0"
description = "A CLI tool to manage configuration presets for the aider AI pair programming tool."
authors = [
  { name="Your Name", email="you@example.com" }, # Placeholder, user should update
]
readme = "README.md" # Assuming a README.md will exist
license = { text="MIT" } # Placeholder, user should choose a license
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Placeholder
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = [
    "typer[all]>=0.9.0", # typer[all] includes rich for nice printing
    "prompt-toolkit>=3.0.0", # Used for TUI components and interactive interface
    "PyYAML>=5.0" # For .aider.model.settings.yml handling as per rules.md
]

[project.urls]
Homepage = "https://github.com/yourusername/aider-start" # Placeholder
Repository = "https://github.com/yourusername/aider-start" # Placeholder

[project.scripts]
aider-start = "aider_start.main:app"

[tool.setuptools.packages.find]
where = ["."] # Look for packages in the current directory
include = ["aider_start*"]  # Include the aider_start package
exclude = ["tests*"] # Exclude tests package from distribution
namespaces = false
